# BareCpper

./: .gitignore  BareCpper.ino  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: ccpp.yml
examples/: CMakeLists.txt
examples/QuadratureEncoder/: QuadratureEncoder.h  QueueSPSC.h  main.cpp
examples/delay/: CMakeLists.txt  delay_main.cpp  main.cpp
examples/devel/: CMakeLists.txt  main.cpp
include/: CodeProfiler.hpp
include/BareCpper/: AnalogToDigitalConverter.hpp  BareCpper.cpp  BareCpper.h  BareCpper.hpp  CharacterSet_8x5.cpp  CharacterSet_8x5.h  Chrono.hpp  Common.hpp  CycleCounter.hpp  CycleTimer.hpp  CycleTimer_dwt.hpp  DateTime.hpp  Delay.hpp  DeviceUid.hpp  FifoQueue.hpp  Io.hpp  MonotonicClock.hpp  MonotonicCounter.hpp  Queue.hpp  RealtimeClock.hpp  RealtimeCounter.hpp  RtcCounter.hpp  RtcTimer.hpp  SpiDma.hpp  SpiLegacy.hpp  StdChronoExt.hpp  SteadyClock.hpp  Sub0Std.hpp  Swi.hpp  TemperatureSensor.hpp  TimerCounter.hpp  TwiAsync.hpp  WIP.hpp  assert.h  common.h  fastmath.h  gpio.h  gpio.hpp  gpio_ATmega328P.h  gpio_ATmega328P.hpp  (+8 more)
include/BareCpper/ARM/: CycleCounter_ARMm4.hpp
include/BareCpper/ATmega/: Gpio_ATmega328P.hpp  Spi_ATmega328P.hpp  serial.h
include/BareCpper/ATsamd/: AnalogToDigitalConverter_ATsamd5x.hpp  Common_ATsamd5x.hpp  CycleCounter_ATsamd5x.hpp  DeviceUid_Atsamd5x.hpp  DigitalToAnalogConverter_ATsamd5x.hpp  Dmac_ATsamd5x.hpp  EventSystem_ATsamd5x.hpp  ExternalInterruptController_ATsamd5x.hpp  Gpio_ATsam5x.hpp  MonotonicCounter_ATsamd5x.hpp  RealtimeCounter_ATsamd5x.hpp  RtcCounter_ATsamd5x.hpp  RtcTimer_ATsamd5x.hpp  Sercom_ATsamd5x.hpp  SpiDma_Atsamd5x.hpp  Spi_Atsamd5x.hpp  Spi_SoftDevice.hpp  Swi_SoftDevice.hpp  TemperatureSensor_ATsamd5x.hpp  TimerCounterControl_ATsamd5x.hpp  TimerCounter_ATsamd5x.hpp  TwiAsycn_ATsamd5x.cpp  TwiAsync_ATsamd5x.hpp  TwiAsync_ATsamd5x_Handlers.hpp  Watchdog_ATsamd5x.hpp  dbg_temp.h  dbg_temp.hpp
include/BareCpper/ATtiny/: Spi_SoftDevice.hpp
include/BareCpper/Arduino/: Spi_Ardunio.hpp
include/BareCpper/Ftdi/: Spi_libMPSSE.hpp
include/BareCpper/MockDevice/: ReadMe.md
include/BareCpper/Philips/: LcdDisplay_PCD8544.cpp  LcdDisplay_PCD8544.hpp  LcdPanel_PCD8544.cpp  LcdPanel_PCD8544.hpp  PCD8544.hpp
include/BareCpper/SoftDevice/: Spi_SoftDevice.hpp
include/BareCpper/internal/: Spi-inl.hpp
include/BareCpper/nRF52/: CycleCounter_nRF52.hpp  CycleTimer_nRF52.hpp  DeviceUid_nRF52.hpp  Gpio_nRF52832.hpp  MonotonicCounter_nRF52.hpp  RealtimeCounter_nRF52.hpp  RtcCounter_nRF52.hpp  RtcTimer_nRF52.hpp  UartDma_nRF52.hpp  Uart_nRF52.hpp
src/BareCpper/ATsamd/: AnalogToDigitalConverter_ATsamd5x.cpp  Dmac_ATsamd5x.cpp  EventSystem_ATsamd5x.cpp  ExternalInterruptController_ATsamd5x.cpp  TemperatureSensor_ATsamd5x.cpp  TimerCounterControl_ATsamd5x.cpp  TimerCounter_ATsamd5x.cpp  TwiAsync_ATsamd5x.cpp  Watchdog_ATsamd5x.cpp
